--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "ava": "2.2.0",
+    "coveralls": "^3.0.6",
     "eslint": "^5",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-ava": "^7.1.0",
