--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "uttori-analytics-provider-json-file",
-  "version": "1.0.1",
+  "version": "1.0.2-pre",
   "description": "Analytics provider for Uttori that uses JSON files.",
   "author": "Matthew Callis <matthew.callis@gmail.com>",
   "contributors": [],
