Refactor to plugin

--- a/package.json
+++ b/package.json
@@ -1,65 +1,80 @@
 {
-  "name": "uttori-analytics-provider-json-file",
-  "version": "2.1.1-pre",
-  "description": "Analytics provider for Uttori that uses JSON files.",
+  "name": "uttori-plugin-analytics-json-file",
+  "version": "1.0.0",
+  "description": "Analytics plugin for Uttori that uses JSON files.",
   "author": "Matthew Callis <matthew.callis@gmail.com>",
   "contributors": [],
   "license": "MIT",
-  "repository": "uttori/uttori-analytics-provider-json-file",
-  "homepage": "https://github.com/uttori/uttori-analytics-provider-json-file",
+  "repository": "uttori/uttori-plugin-analytics-json-file",
+  "homepage": "https://github.com/uttori/uttori-plugin-analytics-json-file",
   "keywords": [
     "analytics",
+    "page views",
+    "views",
+    "stats",
     "json"
   ],
   "engines": {
-    "node": ">= 10"
+    "node": ">= 10.18.0"
   },
   "dependencies": {
     "debug": "^4.1.1",
     "ramda": "^0.26.1",
-    "uttori-utilities": "^1.2.0"
+    "uttori-utilities": "^2.0.0"
   },
   "devDependencies": {
-    "ava": "^2.3.0",
-    "coveralls": "^3.0.6",
-    "eslint": "^6.3.0",
+    "ava": "^3.0.0",
+    "coveralls": "^3.0.9",
+    "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
-    "eslint-plugin-ava": "^8.0.0",
-    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-ava": "^10.0.0",
+    "eslint-plugin-import": "^2.20.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-no-inferred-method-name": "^1.0.2",
-    "eslint-plugin-node": "^9.2.0",
-    "eslint-plugin-optimize-regex": "^1.1.6",
+    "eslint-plugin-no-inferred-method-name": "^2.0.0",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-optimize-regex": "^1.1.7",
     "eslint-plugin-ramda": "^2.5.1",
-    "eslint-plugin-react": "^7.14.3",
-    "eslint-plugin-react-hooks": "^2.0.1",
+    "eslint-plugin-react": "^7.18.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "eslint-plugin-security": "^1.4.0",
-    "eslint-plugin-unicorn": "^10.0.0",
+    "eslint-plugin-unicorn": "^15.0.1",
     "eslint-plugin-xss": "^0.1.9",
     "fs-extra": "^8.1.0",
-    "jsdoc-to-markdown": "^5.0.1",
-    "nyc": "^14.1.1",
-    "sinon": "^7.4.2"
+    "jsdoc-to-markdown": "^5.0.3",
+    "nyc": "^15.0.0",
+    "sinon": "^8.1.0"
   },
   "files": [
-    "index.js"
+    "src/*"
   ],
-  "main": "./index.js",
+  "main": "src/index.js",
+  "ava": {
+    "files": [
+      "test/**/*.test.js"
+    ],
+    "ignoredByWatcher": [
+      "!src/**/*.js"
+    ],
+    "concurrency": 1,
+    "failFast": false,
+    "tap": false,
+    "verbose": true
+  },
   "nyc": {
     "cache": true,
     "all": true,
     "check-coverage": true,
     "include": [
-      "index.js"
+      "src/**/*.js"
     ],
     "exclude": []
   },
   "scripts": {
-    "docs": "jsdoc2md --private --example-lang js --template README.hbs index.js > README.md",
+    "docs": "jsdoc2md --private --example-lang js --template README.hbs src/index.js > README.md; jsdoc2md --private --example-lang js src/analytics-provider.js > docs/analytics-provider.md;",
     "lint": "eslint .",
     "report": "nyc report --reporter=html",
-    "test": "NODE_ENV=test nyc ava --serial --concurrency=1",
-    "test-debug": "DEBUG=Uttori* NODE_ENV=test ava --serial --concurrency=1",
+    "test": "NODE_ENV=test nyc ava --serial",
+    "test-debug": "DEBUG=Uttori* NODE_ENV=test ava --serial",
     "validate": "npm ls"
   }
 }
