--- a/package.json
+++ b/package.json
@@ -19,26 +19,26 @@
   },
   "dependencies": {
     "debug": "^4.1.1",
-    "ramda": "^0.26.1",
+    "ramda": "^0.27.0",
     "uttori-utilities": "^2.1.0"
   },
   "devDependencies": {
-    "ava": "^3.1.0",
+    "ava": "^3.2.0",
     "coveralls": "^3.0.9",
     "docsify-cli": "^4.4.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
-    "eslint-plugin-ava": "^10.0.0",
-    "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-ava": "^10.0.1",
+    "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-no-inferred-method-name": "^2.0.0",
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-optimize-regex": "^1.1.7",
     "eslint-plugin-ramda": "^2.5.1",
-    "eslint-plugin-react": "^7.18.0",
+    "eslint-plugin-react": "^7.18.2",
     "eslint-plugin-react-hooks": "^2.3.0",
     "eslint-plugin-security": "^1.4.0",
-    "eslint-plugin-unicorn": "^15.0.1",
+    "eslint-plugin-unicorn": "^16.0.0",
     "eslint-plugin-xss": "^0.1.9",
     "fs-extra": "^8.1.0",
     "jsdoc-to-markdown": "^5.0.3",
@@ -62,9 +62,9 @@
     "verbose": true
   },
   "nyc": {
-    "cache": true,
+    "cache": false,
     "all": true,
-    "check-coverage": true,
+    "check-coverage": false,
     "include": [
       "src/**/*.js"
     ],
@@ -75,7 +75,7 @@
     "docs-serve": "docsify init ./docs && docsify serve ./docs",
     "lint": "eslint .",
     "report": "nyc report --reporter=html",
-    "test": "NODE_ENV=test nyc ava",
+    "test": "NODE_ENV=test nyc ava --serial --concurrency=1",
     "test-debug": "DEBUG=Uttori* NODE_ENV=test nyc ava --serial --concurrency=1",
     "validate": "npm ls"
   }
