--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "uttori-plugin-analytics-json-file",
-  "version": "1.1.1-pre",
+  "version": "1.1.1",
   "description": "Analytics plugin for Uttori that uses JSON files.",
   "author": "Matthew Callis <matthew.callis@gmail.com>",
   "contributors": [],
