--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
-  "name": "uttori-plugin-analytics-json-file",
-  "version": "1.1.2-pre",
+  "name": "@uttori/plugin-analytics-json-file",
+  "version": "2.0.0",
   "description": "Analytics plugin for Uttori that uses JSON files.",
   "author": "Matthew Callis <matthew.callis@gmail.com>",
   "contributors": [],
   "license": "MIT",
-  "repository": "uttori/uttori-plugin-analytics-json-file",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/uttori/uttori-plugin-analytics-json-file.git"
+  },
+  "bugs": {
+    "url": "https://github.com/uttori/uttori-plugin-analytics-json-file/issues"
+  },
   "homepage": "https://github.com/uttori/uttori-plugin-analytics-json-file",
   "keywords": [
     "analytics",
@@ -15,40 +21,48 @@
     "json"
   ],
   "engines": {
-    "node": ">= 10.18.0"
+    "node": ">= 12"
   },
   "dependencies": {
     "debug": "^4.1.1",
     "ramda": "^0.27.0",
-    "uttori-utilities": "^2.1.0"
+    "uttori-utilities": "^2.3.0"
   },
   "devDependencies": {
-    "ava": "^3.2.0",
-    "coveralls": "^3.0.9",
-    "docsify-cli": "^4.4.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-plugin-ava": "^10.0.1",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "@uttori/event-dispatcher": "^1.0.0",
+    "ava": "^3.9.0",
+    "coveralls": "^3.1.0",
+    "docsify-cli": "^4.4.1",
+    "eslint": "7.2.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-plugin-ava": "^10.3.1",
+    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-jsdoc": "^28.0.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-no-inferred-method-name": "^2.0.0",
-    "eslint-plugin-node": "^11.0.0",
-    "eslint-plugin-optimize-regex": "^1.1.7",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-optimize-regex": "^1.2.0",
     "eslint-plugin-ramda": "^2.5.1",
-    "eslint-plugin-react": "^7.18.3",
-    "eslint-plugin-react-hooks": "^2.3.0",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^4.0.4",
     "eslint-plugin-security": "^1.4.0",
-    "eslint-plugin-unicorn": "^16.0.0",
-    "eslint-plugin-xss": "^0.1.9",
-    "fs-extra": "^8.1.0",
-    "jsdoc-to-markdown": "^5.0.3",
-    "nyc": "^15.0.0",
-    "sinon": "^8.1.1"
+    "eslint-plugin-unicorn": "^20.1.0",
+    "eslint-plugin-xss": "^0.1.10",
+    "fs-extra": "^9.0.1",
+    "jsdoc": "^3.6.4",
+    "jsdoc-to-markdown": "^6.0.1",
+    "nyc": "^15.1.0",
+    "pre-commit": "^1.2.2",
+    "release-it": "^13.6.3",
+    "tsd-jsdoc": "^2.5.0"
   },
   "files": [
-    "src/*"
+    "src/*",
+    "types/*"
   ],
   "main": "src/index.js",
+  "types": "types/index.d.ts",
+  "typings": "types/index.d.ts",
   "ava": {
     "files": [
       "test/**/*.test.js"
@@ -71,12 +85,21 @@
     "exclude": []
   },
   "scripts": {
-    "docs": "jsdoc2md --private --example-lang js --template README.hbs src/index.js > README.md; jsdoc2md --private --example-lang js src/analytics-provider.js > docs/analytics-provider.md;",
+    "docs": "jsdoc2md --private --example-lang js --template rm.hbs src/index.js > README.md; jsdoc2md --private --example-lang js src/analytics-provider.js > docs/analytics-provider.md; jsdoc2md --private --example-lang js src/index.js > docs/plugin.md",
     "docs-serve": "docsify init ./docs && docsify serve ./docs",
     "lint": "eslint .",
+    "make-types": "jsdoc -t node_modules/tsd-jsdoc/dist -r ./src --destination ./; mv types.d.ts types/index.d.ts",
+    "release": "release-it",
     "report": "nyc report --reporter=html",
     "test": "NODE_ENV=test nyc ava --serial --concurrency=1",
     "test-debug": "DEBUG=Uttori* NODE_ENV=test nyc ava --serial --concurrency=1",
     "validate": "npm ls"
-  }
+  },
+  "directories": {
+    "test": "test"
+  },
+  "pre-commit": [
+    "lint",
+    "test"
+  ]
 }
