--- a/package.json
+++ b/package.json
@@ -24,37 +24,37 @@
     "node": ">= 12"
   },
   "dependencies": {
-    "debug": "^4.1.1",
-    "ramda": "^0.27.0",
+    "debug": "^4.2.0",
+    "ramda": "^0.27.1",
     "uttori-utilities": "^2.3.0"
   },
   "devDependencies": {
-    "@uttori/event-dispatcher": "^1.0.0",
-    "ava": "^3.9.0",
+    "@uttori/event-dispatcher": "^1.0.2",
+    "ava": "^3.13.0",
     "coveralls": "^3.1.0",
     "docsify-cli": "^4.4.1",
-    "eslint": "^7.3.1",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-plugin-ava": "^10.3.1",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jsdoc": "^28.5.1",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint": "^7.13.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-ava": "^11.0.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsdoc": "^30.7.8",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-no-inferred-method-name": "^2.0.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-optimize-regex": "^1.2.0",
     "eslint-plugin-ramda": "^2.5.1",
-    "eslint-plugin-react": "^7.20.0",
-    "eslint-plugin-react-hooks": "^4.0.4",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-security": "^1.4.0",
-    "eslint-plugin-unicorn": "^20.1.0",
+    "eslint-plugin-unicorn": "^23.0.0",
     "eslint-plugin-xss": "^0.1.10",
     "fs-extra": "^9.0.1",
-    "jsdoc": "^3.6.4",
+    "jsdoc": "^3.6.6",
     "jsdoc-to-markdown": "^6.0.1",
     "nyc": "^15.1.0",
     "pre-commit": "^1.2.2",
-    "release-it": "^13.6.3",
-    "tsd-jsdoc": "^2.5.0"
+    "release-it": "^14.2.1",
+    "typescript": "^4.0.5"
   },
   "files": [
     "src/*",
@@ -88,7 +88,7 @@
     "docs": "jsdoc2md --private --example-lang js --template rm.hbs src/index.js > README.md; jsdoc2md --private --example-lang js src/analytics-provider.js > docs/analytics-provider.md; jsdoc2md --private --example-lang js src/index.js > docs/plugin.md",
     "docs-serve": "docsify init ./docs && docsify serve ./docs",
     "lint": "eslint .",
-    "make-types": "jsdoc -t node_modules/tsd-jsdoc/dist -r ./src --destination ./; mv types.d.ts types/index.d.ts",
+    "make-types": "rm -fr types/ && mkdir types && tsc --project .tsconfig.json",
     "release": "release-it",
     "report": "nyc report --reporter=html",
     "test": "NODE_ENV=test nyc ava --serial --concurrency=1",
